Java course: add Debugging, Code Review, Architecture, Security, Evolution, Version Validation to all 16 modules
Each module now has all 24 quality factors:
- Debugging Tips (5 problem/solution pairs per module)
- Code Review Checklist (7 items per module)
- Architecture Considerations (patterns and trade-offs)
- Security Considerations (risk/impact/mitigation)
- Evolution & Modernization (version history and migration paths)
- Version Validation (feature/version/status table)